Dropped back to the manufacturer Linux 6.1 tree for the Orange Pi Zero 2W.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22622 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -71,6 +71,17 @@ and the Linux mainline 6.12 LTS kernel, both with serial port console, working
 all the way to the login prompt. Much work on the kernel and device tree
 remains before MuntsOS on the Orange Pi Zero 2W is ready for production
 use.</li>
+<br>
+<li>28 December 2024 -- I had to drop back to the manufacturer Linux 6.1 kernel
+tree for the Orange Pi Zero 2W. The Linux mainline 6.12 LTS tree does not have
+drivers for PWM outputs nor the built-in WiFi chipset, both of which are
+required for the application I have in mind. MuntsOS for the Orange Pi Zero 2W
+built on Linux 6.1 is about at the same point or a litte further along than
+what I had running on Linux 6.12 LTS. Most things seem to be working except
+HDMI and internal WiFi. I have been testing with a <a href=
+"https://uk.pi-supply.com/collections/dongles-hubs/products/broadcom-wifi-adapter-2-port-usb-hub-raspberry-pi">
+Broadcom WiFi Adapter and Two Port Hub</a> I got years ago for the Raspberry Pi
+Zero.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
